Brushup of bibliography

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -1,98 +1,104 @@
-@article{DAM06a,
-    Author = {DAMGARD, Ivan},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {Secret {S}haring},
-    Year = {2006}}
-
-@article{DAM06b,
-    Author = {DAMGARD, Ivan},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {On {E}lectronic {V}oting {S}chemes},
-    Year = {2006}}
-
-@article{DAM08,
-    Author = {DAMGARD, Ivan},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {On {$\Sigma$}-protocols},
-    Year = {2008}} 
-
-
-
-@article{HKFD09,
-    Author = {HAENNI, Rolf and KOENIG, Reto and FISCHLI, Stephan and DUBUIS, Eric},
-    Date-Added = {2011-01-15 17:11:03 +0200},
-    Date-Modified = {2011-01-15 15:17:44 +0200},
-    Title = {{T}rust{V}ote: {A} {P}roposal for a {H}ybrid {E}-{V}oting {S}ystem},
-    Year = {2009}}
-    
-@article{HDU08,
-    Author = {HAENNI, Rolf and DUBUIS, Eric and ULTES-NITSCHE, Ulrich},
-    Date-Added = {2011-11-26 15:00:00 +0200},
-    Date-Modified = {2011-11-26 15:00:00 +0200},
-    Title = {{R}esearch on {E}-{V}oting {T}echnologies - {A} {S}urvey},
-    Year = {2008}}
-   
-@article{KAR10,
-    Author = {KARAYUMAK, M. Fatih},
-    Date-Added = {2011-01-15 17:11:03 +0200},
-    Date-Modified = {2011-01-15 15:17:44 +0200},
-    Title = {{U}sability {A}nalysis and {I}nterface {I}mprovement of the {E}nd to {E}nd {V}erifiable {R}emote-Electronic {V}oting {S}ystem {H}elios},
-    Year = {2010}}   
-    
 @incollection{PED91,
-	year={1991},
-	isbn={978-3-540-54620-7},
-	booktitle={Advances in Cryptology — EUROCRYPT ’91},
-	volume={547},
-	series={Lecture Notes in Computer Science},
-	doi={10.1007/3-540-46416-6_47},
-	title={A Threshold Cryptosystem without a Trusted Party},
-	url={http://dx.doi.org/10.1007/3-540-46416-6_47},
-	publisher={Springer Berlin Heidelberg},
-	author={PEDERSEN, Torben Pryds},
-	pages={522-526},
+	year = {1991},
+	isbn = {978-3-540-54620-7},
+	booktitle = {Advances in Cryptology — EUROCRYPT ’91},
+	volume = {547},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/3-540-46416-6_47},
+	title = {A Threshold Cryptosystem without a Trusted Party},
+	url = {http://dx.doi.org/10.1007/3-540-46416-6_47},
+	publisher = {Springer Berlin Heidelberg},
+	author = {PEDERSEN, Torben Pryds},
+	pages = {522-526},
 }
 
-@article{RJA02,
-    Author = {RJASKOVA, Zuzana},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {Electronic {V}oting {S}chemes},
-    Year = {2002}}
+@incollection{CP93,
+	year = {1993},
+	isbn = {978-3-540-57340-1},
+	booktitle = {Advances in Cryptology — CRYPTO’ 92},
+	volume = {740},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/3-540-48071-4_7},
+	title = {Wallet Databases with Observers},
+	url = {http://dx.doi.org/10.1007/3-540-48071-4_7},
+	publisher = {Springer Berlin Heidelberg},
+	author = {CHAUM, David and PEDERSEN, Torben Pryds},
+	pages = {89-105},
+}
+
+@incollection{CGS97,
+	year = {1997},
+	isbn = {978-3-540-62975-7},
+	booktitle = {Advances in Cryptology — EUROCRYPT ’97},
+	volume = {1233},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/3-540-69053-0_9},
+	title = {A Secure and Optimally Efficient Multi-Authority Election Scheme},
+	url = {http://dx.doi.org/10.1007/3-540-69053-0_9},
+	publisher = {Springer Berlin Heidelberg},
+	author = {CRAMER, Ronald and GENNARO, Rosario and SCHOENMAKERS, Berry},
+	pages = {103-118},
+}
+
+@incollection{Maurer09,
+	year = {2009},
+	isbn = {978-3-642-02383-5},
+	booktitle = {Progress in Cryptology – AFRICACRYPT 2009},
+	volume = {5580},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/978-3-642-02384-2_17},
+	title = {Unifying Zero-Knowledge Proofs of Knowledge},
+	url = {http://dx.doi.org/10.1007/978-3-642-02384-2_17},
+	publisher = {Springer Berlin Heidelberg},
+	author = {MAURER, Ueli},
+	pages = {272-286}
+}
+
+@incollection{FS87,
+	year = {1987},
+	isbn = {978-3-540-18047-0},
+	booktitle = {Advances in Cryptology — CRYPTO’ 86},
+	volume = {263},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/3-540-47721-7_12},
+	title = {How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
+	url = {http://dx.doi.org/10.1007/3-540-47721-7_12},
+	publisher = {Springer Berlin Heidelberg},
+	author = {FIAT, Amos and SHAMIR, Adi}, 
+	pages = {186-194},
+}
+
+@inproceedings{HKRS12,
+	author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
+	title = {A Fair and Robust Voting System by Broadcast},
+	year = {2012},
+	booktitle = {EVOTE'12: 5th International Conference on Electronic Voting},
+	note = {"To appear."},
+}
 
 @article{Schnorr91,
-	year={1991},
-	issn={0933-2790},
-	journal={Journal of Cryptology},
-	volume={4},
-	issue={3},
-	doi={10.1007/BF00196725},
-	title={Efficient signature generation by smart cards},
-	url={http://dx.doi.org/10.1007/BF00196725},
-	publisher={Springer-Verlag},
-	keywords={Digital signatures; Public-key signatures; Public-key authentication; ElGamal signatures; Discrete logarithm one-way function; Signatures with preprocessing; Random exponentiated residues},
+	year = {1991},
+	issn = {0933-2790},
+	journal = {Journal of Cryptology},
+	volume = {4},
+	issue = {3},
+	doi = {10.1007/BF00196725},
+	title = {Efficient signature generation by smart cards},
+	url = {http://dx.doi.org/10.1007/BF00196725},
+	publisher = {Springer-Verlag},
+	keywords = {Digital signatures; Public-key signatures; Public-key authentication; ElGamal signatures; Discrete logarithm one-way function; Signatures with preprocessing; Random exponentiated residues},
 	Author = {SCHNORR, Claus Peter},
-	pages={161-174},
+	pages = {161-174},
 }
 
-@article{SCHW07,
-    Author = {SCHWEISGUT, Jörn},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {Elektronische {W}ahlen unter dem {E}insatz kryptografischer {O}bserver},
-    Year = {2007}}
-
 @article{Shamir79,
-	Author = {SHAMIR, Adi},
+	author = {SHAMIR, Adi},
 	title = {How to share a secret},
 	journal = {Commun. ACM},
 	issue_date = {Nov. 1979},
 	volume = {22},
 	number = {11},
-	month = nov,
+	month = {nov},
 	year = {1979},
 	issn = {0001-0782},
 	pages = {612--613},
@@ -103,125 +109,23 @@
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {cryptography, interpolation, key management},
-} 
-
-
-@article{WEB06,
-    Author = {WEBER, Stefan},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {A {C}oercion-{R}esistant {C}ryptographic {V}oting {P}rotocol - {E}valuation and {P}rototype {I}mplementation},
-    Year = {2006}}
-   
-@webpage{WP01,
-    Date-Added = {2010-05-31 22:16:02 +0200},
-    Date-Modified = {2010-05-31 22:16:41 +0200},
-    Title = {\url{http://en.wikipedia.org/wiki/Shamir's_Secret_Sharing}},
-    Lastchecked = {2010-05-31},
-    Url = {http://en.wikipedia.org/wiki/Shamir's_Secret_Sharing}}
-    
-@webpage{WP02,
-    Date-Added = {2011-11-26 15:00:00 +0200},
-    Date-Modified = {2011-11-26 15:00:00 +0200},
-    Title = {\url{http://en.wikipedia.org/wiki/RSA_(algorithm)}},
-    Lastchecked = {2011-11-26},
-    Url = {http://en.wikipedia.org/wiki/RSA_(algorithm)}}
-    
-@webpage{WP03,
-    Date-Added = {2011-11-26 15:00:00 +0200},
-    Date-Modified = {2011-11-26 15:00:00 +0200},
-    Title = {\url{http://en.wikipedia.org/wiki/ElGamal_encryption}},
-    Lastchecked = {2011-11-26},
-    Url = {http://en.wikipedia.org/wiki/ElGamal_encryption}}
-    
-    
-@webpage{HELIOS,
-    Date-Added = {2011-11-26 15:00:00 +0200},
-    Date-Modified = {2011-11-26 15:00:00 +0200},
-    Title = {\url{http://heliosvoting.org/}},
-    Lastchecked = {2011-11-26},
-    Url = {http://heliosvoting.org/}}
-
-
-@incollection{CP93,
-	year={1993},
-	isbn={978-3-540-57340-1},
-	booktitle={Advances in Cryptology — CRYPTO’ 92},
-	volume={740},
-	series={Lecture Notes in Computer Science},
-	doi={10.1007/3-540-48071-4_7},
-	title={Wallet Databases with Observers},
-	url={http://dx.doi.org/10.1007/3-540-48071-4_7},
-	publisher={Springer Berlin Heidelberg},
-	Author = {CHAUM, David and PEDERSEN, Torben Pryds},
-	pages={89-105},
 }
 
-
-@article{PET05,
-    Author = {PETERS, R. A.},
-    Date-Added = {2011-01-21 21:25:00 +0200},
-    Date-Modified = {2011-21-18 21:25:00 +0200},
-    Title = {A {S}ecure {B}ulletin {B}oard},
-    Year = {2005}}
-   
-@book{SCHNEIER,
-    Author          = {SCHNEIER, Bruce},
-    Title           = {Angewandte Kryptographie},
-    Publisher       = {Pearson Studium},
-    Year            = {2006},
-    ISBN            = {3-8273-7228-3}
-}
-
-@article{LEE01,
-    Author = {BYOUNGCHEON, Lee},
-    Date-Added = {2011-01-18 21:25:00 +0200},
-    Date-Modified = {2011-01-18 21:25:00 +0200},
-    Title = {Zero-knowledge Proofs, Digital Signature Variants, and Their Applications.},
-    Year = {2001}}  
-    
-    
-@article{HRZ10,
-    Author = {HAO, Feng and RYAN, Peter Y. A. and ZIELINSKI, P.},
-    Date-Added = {2012-09-22 21:25:00 +0200},
-    Date-Modified = {2012-09-22 21:25:00 +0200},
-    Title = {{A}nonymous voting by two-round public discussion},
-    Year = {2010}}  
-    
-@inproceedings{HKRS12,
-	Author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
-	title = {A Fair and Robust Voting System by Broadcast},
-	year = {2012},
-	booktitle = {EVOTE'12: 5th International Conference on Electronic Voting},
-	note = "To appear."
-}
-
-@incollection{CGS97,
-	year={1997},
-	isbn={978-3-540-62975-7},
-	booktitle={Advances in Cryptology — EUROCRYPT ’97},
-	volume={1233},
-	series={Lecture Notes in Computer Science},
-	doi={10.1007/3-540-69053-0_9},
-	title={A Secure and Optimally Efficient Multi-Authority Election Scheme},
-	url={http://dx.doi.org/10.1007/3-540-69053-0_9},
-	publisher={Springer Berlin Heidelberg},
-	Author = {CRAMER, Ronald and GENNARO, Rosario and SCHOENMAKERS, Berry},
-	pages={103-118},
-}
-        
 @article{EG84,
-	Author = {EL GAMAL, Taher},
-	journal={Information Theory, IEEE Transactions on}, 
-	title={A public key cryptosystem and a signature scheme based on discrete logarithms}, 
-	year={1985}, 
-	volume={31}, 
-	number={4}, 
-	pages={469-472}, 
-	keywords={Cryptography;Logarithmic arithmetic;Digital signatures;Galois fields;Helium;Information security;Information systems;Milling machines;Public key;Public key cryptography}, 
-	doi={10.1109/TIT.1985.1057074}, 
-	ISSN={0018-9448},}
-    
+	author = {EL GAMAL, Taher},
+	journal = {Information Theory, IEEE Transactions on}, 
+	title = {A public key cryptosystem and a signature scheme based on discrete logarithms}, 
+	year = {1985}, 
+	volume = {31}, 
+	number = {4}, 
+	pages = {469-472}, 
+	keywords = {Cryptography;Logarithmic arithmetic;Digital signatures;Galois fields;Helium;Information security;Information systems;Milling machines;Public key;Public key cryptography},
+	url = {http://doi.acm.org/10.1109/TIT.1985.1057074}, 
+	doi = {10.1109/TIT.1985.1057074}, 
+	issn = {0018-9448},
+}
+
+
 @techreport{ritter13a,
      title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
      author = {RITTER, Juerg},
@@ -229,6 +133,7 @@
      group = {E-Voting Group},
      year = {2013},
      month = {02},
+     url = {http://e-voting.bfh.ch/students/theses-reports},
 }
     
 @techreport{ritter12,
@@ -238,243 +143,13 @@
      group = {E-Voting Group},
      year = {2012},
      month = {06},
-}
-    
-@article{Gol02,
-    author = {Oded Goldreich},
-    title = {Zero-Knowledge twenty years after its invention},
-    institution = {Electronic Colloquium on Computational Complexity (http://www.eccc.uni-trier.de/eccc/), Report No},
-    year = {2002}
+     url = {http://e-voting.bfh.ch/students/theses-reports},
 }
 
-@incollection{Maurer09,
-	year={2009},
-	isbn={978-3-642-02383-5},
-	booktitle={Progress in Cryptology – AFRICACRYPT 2009},
-	volume={5580},
-	series={Lecture Notes in Computer Science},
-	doi={10.1007/978-3-642-02384-2_17},
-	title={Unifying Zero-Knowledge Proofs of Knowledge},
-	url={http://dx.doi.org/10.1007/978-3-642-02384-2_17},
-	publisher={Springer Berlin Heidelberg},
-	author={MAURER, Ueli},
-	pages={272-286}
+
+@online{www:EVG,
+	author = {BFH E-Voting Group},
+	title = {E-Voting Group},
+	date = {2013-03-22},
+	url = {http://e-voting.bfh.ch/},
 }
-
-@incollection{FS87,
-	year={1987},
-	isbn={978-3-540-18047-0},
-	booktitle={Advances in Cryptology — CRYPTO’ 86},
-	volume={263},
-	series={Lecture Notes in Computer Science},
-	doi={10.1007/3-540-47721-7_12},
-	title={How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
-	url={http://dx.doi.org/10.1007/3-540-47721-7_12},
-	publisher={Springer Berlin Heidelberg},
-	Author = {FIAT, Amos and SHAMIR, Adi}, 
-	pages={186-194},
-}
-	
-    
-@webpage{BouncyCastle,
-    Date-Added = {2012-02-27 15:00:00 +0200},
-    Date-Modified = {2012-02-27 15:00:00 +0200},
-    Title = {\url{http://www.bouncycastle.org/}},
-    Lastchecked = {2012-02-27},
-    Url = {\url{http://www.bouncycastle.org/}}}
-    
-@webpage{Qilin,
-    Date-Added = {2012-02-27 15:00:00 +0200},
-    Date-Modified = {2012-02-27 15:00:00 +0200},
-    Title = {\url{http://qilin.seas.harvard.edu/}},
-    Lastchecked = {2012-02-27},
-    Url = {http://qilin.seas.harvard.edu/}}
-    
-@webpage{Verificatum,
-    Date-Added = {2012-02-27 15:00:00 +0200},
-    Date-Modified = {2012-02-27 15:00:00 +0200},
-    Title = {\url{http://www.verificatum.org/}},
-    Lastchecked = {2012-02-27},
-    Url = {http://www.verificatum.org/}}
-    
-@webpage{CACE,
-    Date-Added = {2012-02-27 15:00:00 +0200},
-    Date-Modified = {2012-02-27 15:00:00 +0200},
-    Title = {\url{http://nacl.cace-project.eu/}},
-    Lastchecked = {2012-02-27},
-    Url = {http://nacl.cace-project.eu/}}
-    
-@webpage{VIFF,
-    Date-Added = {2012-02-27 15:00:00 +0200},
-    Date-Modified = {2012-02-27 15:00:00 +0200},
-    Title = {\url{http://viff.dk/}},
-    Lastchecked = {2012-02-27},
-    Url = {http://viff.dk/}}
-    
-@webpage{EVG,
-    Date-Added = {2012-05-11 15:00:00 +0200},
-    Date-Modified = {2012-05-11 15:00:00 +0200},
-    Title = {\url{http://e-voting.bfh.ch/}},
-    Lastchecked = {2012-05-11},
-    Url = {http://e-voting.bfh.ch/}}
-    
-@misc{www:BouncyCastle,
-   author = "{Bouncy Castle Project}",
-   title = "Bouncy {C}astle",
-   year = "2012",
-   howpublished = "\url{http://bouncycastle.org}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{www:Qilin,
-   author = "Tal Moran",
-   title = "The {Q}ilin {C}rypto {SDK}",
-   year = "2012",
-   howpublished = "\url{http://qilin.seas.harvard.edu/}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{www:Verificatum,
-   author = "Douglas Wikstroem",
-   title = "Verificatum",
-   year = "2012",
-   howpublished = "\url{http://www.verificatum.org/}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{www:CACE,
-   author = "{CACE Project}",
-   title = "Na{C}l: {N}etworking and {C}ryptography library",
-   year = "2012",
-   howpublished = "\url{http://nacl.cace-project.eu/}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{www:VIFF,
-   author = "{VIFF Project}",
-   title = "{VIFF}, the {V}irtual {I}deal {F}unctionality {F}ramework",
-   year = "2012",
-   howpublished = "\url{http://viff.dk/}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{www:EVG,
-   author = "{BFH E-Voting Group}",
-   title = "E-{V}oting {G}roup",
-   year = "2013",
-   howpublished = "\url{http://e-voting.bfh.ch/}",
-   note = "[Online; accessed 12-January-2013]"}
-
-@misc{wiki:ElGamal,
-   author = "Wikipedia",
-   title = "{E}l{G}amal encryption --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2012",
-   howpublished = "\url{http://en.wikipedia.org/wiki/ElGamal_encryption}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{wiki:RSA,
-   author = "Wikipedia",
-   title = "{R}{S}{A} (algorithm) --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2012",
-   howpublished = "\url{http://en.wikipedia.org/wiki/RSA_(algorithm)}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{wiki:DSA,
-   author = "Wikipedia",
-   title = "{D}igital {S}ignature {A}lgorithm --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Digital_Signature_Algorithm}",
-   note = "[Online; accessed 09-June-2012]"}
-    
-@misc{wiki:ZKP,
-   author = "Wikipedia",
-   title = "Zero-knowledge proof --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Zero-knowledge_proof}",
-   note = "[Online; accessed 09-June-2012]"}
- 
-@misc{wiki:Schnorr,
-   author = "Wikipedia",
-   title = "Schnorr signature --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Schnorr_signature}",
-   note = "[Online; accessed 09-June-2012]"}
-   
-@misc{wiki:Bluetooth,
-   author = "Wikipedia",
-   title = "Bluetooth --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Bluetooth}",
-   note = "[Online; accessed 12-January-2013]"}
-
-@misc{wiki:WiFi,
-   author = "Wikipedia",
-   title = "{W}i-{F}i --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Wi-Fi}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{wiki:WiFiDirect,
-   author = "Wikipedia",
-   title = "{W}i-{F}i Direct --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Wi-Fi_Direct}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{wiki:NFC,
-   author = "Wikipedia",
-   title = "Near field communication --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Near_field_communication}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{wiki:Barcode,
-   author = "Wikipedia",
-   title = "Barcode --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Barcode}",
-   note = "[Online; accessed 12-January-2013]"}
-
-@misc{wiki:QRcode,
-   author = "Wikipedia",
-   title = "{Q}{R} code --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/QR_code}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{wiki:TCP,
-   author = "Wikipedia",
-   title = "{T}ransmission {C}ontrol {P}rotocol --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/Transmission_Control_Protocol}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{wiki:UDP,
-   author = "Wikipedia",
-   title = "{U}ser {D}atagram {P}rotocol --- {W}ikipedia{,} {T}he {F}ree {E}ncyclopedia",
-   year = "2013",
-   howpublished = "\url{http://en.wikipedia.org/wiki/User_Datagram_Protocol}",
-   note = "[Online; accessed 12-January-2013]"}
-
-@misc{www:Android,
-   author = "{Android}",
-   title = "Android",
-   year = "2013",
-   howpublished = "\url{http://www.android.com/}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{www:iOS,
-   author = "{Apple iOS}",
-   title = "Apple i{O}{S}",
-   year = "2013",
-   howpublished = "\url{http://www.apple.com/ios/}",
-   note = "[Online; accessed 12-January-2013]"}
-
-@misc{www:WindowsPhone,
-   author = "{Windows Phone}",
-   title = "Windows Phone",
-   year = "2013",
-   howpublished = "\url{http://www.windowsphone.com/}",
-   note = "[Online; accessed 12-January-2013]"}
-   
-@misc{www:BC,
-   author = "{The Bouncy Castle Project}",
-   title = "{B}ouncy {C}astle",
-   year = "2013",
-   howpublished = "\url{http://www.bouncycastle.org/}",
-   note = "[Online; accessed 12-January-2013]"}
