--- a/document.tex
+++ b/document.tex
@@ -72,8 +72,8 @@ One of the research fields of the Bern University of Applied Sciences is the
 area of E-Voting. E-Voting has become a big field of research in the past couple
 years. Still, there is no generic approach which meets all the criteria such as
 privacy, transparency, etc. which we want in E-Voting. The E-Voting research
-group of the Bern University of Applied Sciences \cite{www:EVG} tries to improve
-this situation with the following approaches:
+group of the Bern University of Applied Sciences \cite{www:EVG} tries to
+improve this situation with the following approaches:
 \begin{itemize}
   \item Develop new approaches and provide them to the community for review
   \item Take existing approaches and evaluate them in terms of practicability.
@@ -435,6 +435,7 @@ $c=H((c_1,c_2),t)$ and check whether the following condition holds:
 
 
 \subparagraph{Proving Validity.}
+This section needs to be written.  
 
 \subsubsection{Bulletin Board}
 \label{sec:bulletinboard}
