--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -76,6 +76,21 @@
 	note = {"To appear."},
 }
 
+@inproceedings{HS11,
+	author = {HAENNI, Rolf and SPYCHER, Oliver},
+	title = {Secure internet voting on limited devices with anonymized DSA public keys},
+	booktitle = {Proceedings of the 2011 conference on Electronic voting technology/workshop on trustworthy elections},
+	series = {EVT/WOTE'11},
+	year = {2011},
+	location = {San Francisco, CA},
+	pages = {8--8},
+	numpages = {1},
+	url = {http://dl.acm.org/citation.cfm?id=2028012.2028020},
+	acmid = {2028020},
+	publisher = {USENIX Association},
+	address = {Berkeley, CA, USA},
+} 
+
 @article{Schnorr91,
 	year = {1991},
 	issn = {0933-2790},
@@ -146,6 +161,13 @@
      url = {http://e-voting.bfh.ch/students/theses-reports},
 }
 
+@phdthesis{Jonker09,
+	title = {Security Matters: Privacy in Voting and Fairness in Digital Exchange},
+	author = {JONKER, Hugo Lennaert},
+	institution = {Eindhoven University of Technology and University of Luxembourg},
+	school = {Eindhoven University of Technology and University of Luxembourg},
+	year = {2009},
+}
 
 @online{www:EVG,
 	author = {BFH E-Voting Group},
