Changed properties list to descriptions

--- a/document.tex
+++ b/document.tex
@@ -170,24 +170,24 @@ couldn't find it's way to success so far. For a better understanding, we should
 identify the properties that we expect from an E-Voting system. Over the time,
 some properties and their definitions have emerged.
 
-\begin{itemize}
-  \item \textbf{Democracy:} Only eligible voters can a vote, and each voter can
+\begin{description}
+  \item[Democracy:] Only eligible voters can a vote, and each voter can
   cast at most one ballot which will be included in the result.
-  \item \textbf{Accuracy:} The result is derived only from \emph{all} valid
+  \item[Accuracy:] The result is derived only from \emph{all} valid
   votes as they were cast, i.e. cast votes can not be modified.
-  \item \textbf{Universal verifiability:} Anyone can verify the correctness of
+  \item[Universal verifiability:] Anyone can verify the correctness of
   the result.
-  \item \textbf{Individual verifiability:} A voter can can verify that her vote
+  \item[Individual verifiability:] A voter can can verify that her vote
   is included in the result as she cast it.
-  \item \textbf{Privacy:} Nobody can obtain information how a voter has
+  \item[Privacy:] Nobody can obtain information how a voter has
   voted.
-  \item \textbf{Receipt-freeness:} The voter can not prove to anybody else how
+  \item[Receipt-freeness:] The voter can not prove to anybody else how
   she voted.
-  \item \textbf{Coercion-resistance:} Noone can force a voter to vote in a
+  \item[Coercion-resistance:] Noone can force a voter to vote in a
   particular way, or prevent a voter to vote at all.
-  \item \textbf{Robustness:} An attacker is not able to disrupt an election
+  \item[Robustness:] An attacker is not able to disrupt an election
   process or change the outcome by dammaging a small set of system components. 
-\end{itemize}
+\end{description}
 
 All these properties are discussed in detail in \cite{HS11} and \cite{Jonker09}.
 As it turns out, it is not at all easy to build a system that meets all these
